--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.21.2",
     "querystring": "^0.2.1",
