--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
   "name": "spotify-now-playing",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "wrangler deploy",
+    "cf-typegen": "wrangler types",
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf dist .wrangler",
+    "preview:wrangler": "npm run build && wrangler dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.8.1",
-    "cors": "^2.8.5",
-    "ejs": "^3.1.9",
-    "express": "^4.21.2",
-    "querystring": "^0.2.1",
-    "serverless-http": "^3.2.0"
+    "@vitejs/plugin-react": "^4.7.0",
+    "hono": "^4.8.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@cloudflare/vite-plugin": "^1.11.0",
+    "@cloudflare/workers-types": "^4.20250803.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "typescript": "^5.9.2",
+    "vite": "^7.0.6",
+    "wrangler": "^4.27.0"
   }
 }
