Remove wrangler.toml and add custom domain route
- Remove unused wrangler.toml file (project uses wrangler.jsonc)
- Add route configuration for spotify.daviddennislinda.com
- Remove assets configuration to fix Pages deployment issue

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,7 +3,10 @@
   "name": "spotify-now-playing",
   "compatibility_date": "2025-04-01",
   "main": "src/index.ts",
-  "assets": {
-    "not_found_handling": "single-page-application"
-  }
+  "routes": [
+    {
+      "pattern": "spotify.daviddennislinda.com/*",
+      "zone_name": "daviddennislinda.com"
+    }
+  ]
 }
